--- a/GameDevelopment/index.html
+++ b/GameDevelopment/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
+    <link rel="stylesheet" href="./asset/css/style.css">
 </head>
 <body>
     
+    <canvas id="myCanvas" width="480" height="320"></canvas>
 
     <script src="./asset/js/game.js"></script>
     
