--- a/ReadingAssignment/index.html
+++ b/ReadingAssignment/index.html
@@ -55,9 +55,11 @@
             <div class="row">
                 <div class="col-md-6 mt-4">
                     <h3>5. What is Export Default?</h3>
+                    <p>The export statement is used when creating JavaScript modules to export live bindings to functions, objects, or primitive values from the module</p>
+                    <p>We can have only one default export per module.</p>
                 </div>
                 <div class="col-md-6 mt-4">
-                    <button class="btn btn-success btn-lg">DEMO</button>
+                    <button class="btn btn-success btn-lg" id="exportDef">DEMO</button>
                 </div>
             </div>
 
