--- a/ReadingAssignment/index.html
+++ b/ReadingAssignment/index.html
@@ -37,9 +37,12 @@
             <div class="row">
                 <div class="col-md-6 mt-4">
                     <h3>3. Explain and demo closures</h3>
+                    <p>JavaScript variables can belong to the local or global scope. Global variables can be made local (private) with closures.</p>
+                    <p>In other words, a closure gives us access to an outer function’s scope from an inner function. 
+                        In JavaScript, closures are created every time a function is created, at function creation time.</p>
                 </div>
                 <div class="col-md-6 mt-4">
-                    <button class="btn btn-success btn-lg">DEMO</button>
+                    <button class="btn btn-success btn-lg" id="closure">DEMO</button>
                 </div>
             </div>
 
