Tagged Templates finished

--- a/ReadingAssignment/index.html
+++ b/ReadingAssignment/index.html
@@ -19,9 +19,13 @@
             <div class="row">
                 <div class="col-md-6 mt-4">
                     <h3>1. What are Tagged Templates?</h3>
+                    <p>Template literals are string literals allowing embedded expressions. They are enclosed by the backtick (` `). They can contain placeholders. 
+                        These are indicated by the dollar sign and curly braces (${expression}).</p>
+                    <p>A more advanced form of template literals are tagged templates. Tags allow us to parse template literals with a function. 
+                        The first argument of a tag function contains an array of string values. The remaining arguments are related to the expressions.</p>
                 </div>
                 <div class="col-md-6 mt-4">
-                    <button class="btn btn-success btn-lg">DEMO</button>
+                    <button class="btn btn-success btn-lg" id="taggedTemp">DEMO</button>
                 </div>
             </div>
 
