First class functions, returning functions and passing functions finished

--- a/ReadingAssignment/index.html
+++ b/ReadingAssignment/index.html
@@ -31,10 +31,16 @@
 
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>2. Explain and demonstrate first class function</h3>
+                    <h3>2. Explain and demonstrate first class functions</h3>
+                    <p>First-class functions occur when functions in a programming language are treated like any other variables. 
+                        In first-class functions, a function can be passed as an argument to other functions, can be returned by another function and 
+                        can be assigned as a value to a variable.</p>
                 </div>
-                <div class="col-md-6 mt-4">
-                    <button class="btn btn-success btn-lg">DEMO</button>
+                <div class="col-md-2 mt-4">
+                    <button class="btn btn-success btn-lg" id="passingFunc">DEMO A</button>
+                </div>
+                <div class="col-md-2 mt-4">
+                    <button class="btn btn-success btn-lg" id="returnFunc">DEMO B</button>
                 </div>
             </div>
 
