Reflect API added and assignment finished

--- a/ReadingAssignment/index.html
+++ b/ReadingAssignment/index.html
@@ -18,7 +18,7 @@
 
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>1. What are Tagged Templates?</h3>
+                    <h2>1. What are Tagged Templates?</h2>
                     <p>Template literals are string literals allowing embedded expressions. They are enclosed by the backtick (` `). They can contain placeholders. 
                         These are indicated by the dollar sign and curly braces (${expression}).</p>
                     <p>A more advanced form of template literals are tagged templates. Tags allow us to parse template literals with a function. 
@@ -31,7 +31,7 @@
 
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>2. Explain and demonstrate first class functions</h3>
+                    <h2>2. Explain and demonstrate first class functions</h2>
                     <p>First-class functions occur when functions in a programming language are treated like any other variables. 
                         In first-class functions, a function can be passed as an argument to other functions, can be returned by another function and 
                         can be assigned as a value to a variable.</p>
@@ -46,7 +46,7 @@
 
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>3. Explain and demo closures</h3>
+                    <h2>3. Explain and demo Closures</h2>
                     <p>JavaScript variables can belong to the local or global scope. Global variables can be made local (private) with closures.</p>
                     <p>In other words, a closure gives us access to an outer function’s scope from an inner function. 
                         In JavaScript, closures are created every time a function is created, at function creation time.</p>
@@ -58,16 +58,18 @@
 
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>4. Demonstrate the Reflect API</h3>
+                    <h2>4. Demonstrate the Reflect API</h2>
+                    <p>Reflect is a built-in object that provides methods for interceptable JavaScript operations.</p>
+                    <p>Reflect allows us to call methods, construct objects, get and set properties and manipulate and extend properties.</p>
                 </div>
                 <div class="col-md-6 mt-4">
-                    <button class="btn btn-success btn-lg">DEMO</button>
+                    <button class="btn btn-success btn-lg" id="reflect">DEMO</button>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>5. What is Export Default?</h3>
+                    <h2>5. What is Export Default?</h2>
                     <p>The export statement is used when creating JavaScript modules to export live bindings to functions, objects, or primitive values from the module</p>
                     <p>We can have only one default export per module.</p>
                 </div>
@@ -78,7 +80,7 @@
 
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>6. What are iterators and generators?</h3>
+                    <h2>6. What are Iterators and Generators?</h2>
                     <p>In JavaScript an iterator is an object which defines a sequence and potentially a return value upon its termination. 
                         Once created, an iterator object can be iterated explicitly by repeatedly calling next().</p>
                     <p>Generators can return (“yield”) multiple values, one after another, on-demand. They work great with iterables, allowing us to create data streams with ease. 
@@ -92,7 +94,7 @@
 
             <div class="row">
                 <div class="col-md-6 mt-4">
-                    <h3>7. What are Sets and Maps in JS?</h3>
+                    <h2>7. What are Sets and Maps in JS?</h2>
                     <p>The Set object lets us store unique values of any type, whether primitive values or object references. 
                         A value in a Set may only occur once(no duplicate items); it is unique in the Set's collection.</p>
                     <p>The Map object holds key-value pairs and remembers the original insertion order of the keys. 
